# Flame

./: .gitignore  CMakeLists.txt  README.md  consts.h  core.cpp  core.h  flame_engine.h  fonts.cpp  graphics.cpp  graphics.h  main.cpp  play  sound.cpp  sound.h  testing.cpp
include/: core.h  fonts.h  sound.h
